Add logo to top bar

--- a/_layouts/agency.html
+++ b/_layouts/agency.html
@@ -15,9 +15,7 @@
     <!-- Start Top Bar -->
     <div class="top-bar">
       <div class="top-bar-left">
-        <ul class="menu">
-          <li class="menu-text">{{ site.title }}</li>
-        </ul>
+        <img src="images/weblogo.png" class="logotype"/>
       </div>
     </div>
     <!-- End Top Bar -->
