Add cases for display

--- a/_layouts/agency.html
+++ b/_layouts/agency.html
@@ -6,10 +6,8 @@
     <title>{{ site.title }}</title>
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
-    <!--
-    <link rel="stylesheet" href="http://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
-    -->
-  </head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/motion-ui/1.1.1/motion-ui.min.css" />
+   </head>
   <body>
 
     <!-- Start Top Bar -->
@@ -23,7 +21,7 @@
     {{ content }}
 
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="http://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.0/js/foundation.min.js"></script>
     <script>
       $(document).foundation();
     </script>
