--- a/_includes/content.html
+++ b/_includes/content.html
@@ -1,24 +1,24 @@
-<div class="callout large">
+<div class="callout large what-we-are">
   <div class="row column text-center" markdown="1">
       {{ callout }}
   </div>
 </div>
 
 
-<div class="row column">
-  <h2>Vi är hejare</h2>
+<div class="row column who-we-are">
+  <h2 class="title">Vi är hejare</h2>
 </div>
 
-<div class="row small-up-1 medium-up-2 large-up-2">
+<div class="row small-up-1 medium-up-2 large-up-2 who-we-are">
 
   {% for employee in site.data.employees %}
-  <div class="column column-block media-object">
+  <div class="column column-block media-object techie">
     <div class="media-object-section">
-      <img src="https://api.adorable.io/avatars/160/{{ employee.name }}@hejare.png">
+      <img src="http://i.pravatar.cc/200?u={{ employee.name }}@hejare" class="portrait">
     </div>
-    <div class="media-object-section">
-      <h4>{{ employee.name }}</h4>
-      <p class="lead">{{ employee.tagline }}</p>
+    <div class="media-object-section info">
+      <h4 class="name">{{ employee.name }}</h4>
+      <p class="lead tagline">{{ employee.tagline }}</p>
     </div>
   </div>
   {% endfor %}
@@ -31,7 +31,8 @@
   <h2>Case i urval</h2>
 </div>
 
-<div class="row orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
+
+<div class="row orbit what-we-are-doing" role="region" aria-label="Case i urval" data-orbit data-options="animInFromLeft:fade-in; animInFromRight:fade-in; animOutToLeft:fade-out; animOutToRight:fade-out;">
   <ul class="orbit-container">
     <button class="orbit-previous" aria-label="previous"><span class="show-for-sr">Föregående Case</span>&#9664;</button>
     <button class="orbit-next" aria-label="next"><span class="show-for-sr">Nästa Case</span>&#9654;</button>
@@ -44,9 +45,14 @@
       {% else %}
       <li class="orbit-slide">
       {% endif %}
-        <div>
-          <h3>{{ case.name }}</h3>
-          <p>{{ case.description }}</p>
+        <div class="case row">
+          <div class="figure-container column large-4">
+            <img src="images/{{ case.image }}" class="figure"/>
+          </div>
+          <div class="column large-8">
+            <h3>{{ case.name }}</h3>
+            <p>{{ case.description }}</p>
+          </div>
         </div>
       </li>
     {% endfor %}
@@ -73,7 +79,6 @@
 
   </nav>
 </div>
-
 
 <hr>
 
