Add contact section

--- a/_layouts/agency.html
+++ b/_layouts/agency.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/motion-ui/1.1.1/motion-ui.min.css" />
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" />
    </head>
   <body>
 
@@ -19,6 +20,20 @@
     <!-- End Top Bar -->
 
     {{ content }}
+
+    <!-- Footer -->
+
+    <footer class="footer">
+      <div class="row">
+        <div class="small-12 columns">
+          <p class="slogan">Är du en hejare på något? Hör av dig!</p>
+          <h4 class="email">hej@hejare.se</h4>
+          <h4 class="phone">07378272</h4>
+          <h4 class="address"><br>Banérgatan 23 <br>1128 Stockholm</h4>
+          <p class="copywrite">Crafted with love by incredible techies at Hejare 2017</p>
+        </div>
+      </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.0/js/foundation.min.js"></script>
