Customize typing effect

--- a/_layouts/agency.html
+++ b/_layouts/agency.html
@@ -45,12 +45,65 @@
 
       var skills = {{ site.data.skills | jsonify }};
 
+      skills[skills.length - 1] += "^5000";
+      skills.push("");
+
+
+      jQuery.fn.cleanWhitespace = function() {
+        textNodes = this.contents().filter(
+            function() { return (this.nodeType == 3 && !/\S/.test(this.nodeValue)); })
+            .remove();
+        return this;
+      }
+
+      var humanize = Math.round((Math.random() * 100) + 20);
+
+
+      var typedText = $('.what-we-are .already-typed');
+      var intrvl;
+
+      function backspace() {
+        var word = typedText.text();
+        var wordLength = word.length;
+        var newWordLength = wordLength - 1;
+        var newWord = word.slice(0, newWordLength);
+        typedText.html(newWord);
+
+        if (newWord === "Vi är") {
+          clearTimeout(intrvl);
+
+          $("<em class=\"nice\">").insertBefore(".typed-cursor")
+          $(".typed-cursor").remove();
+
+          $(".what-we-are em:last").typed({
+            strings: ["^2000 snälla"],
+            typeSpeed: 300,
+
+          })
+
+
+        } else {
+          newWordLength = wordLength;
+        }
+      }
+
+
       $(function(){
-        $(".what-we-are em").typed({
+        $(".what-we-are em:last").typed({
           strings: skills,
-          typeSpeed: 100
+          typeSpeed: 100,
+          startDelay: 400,
+          //shuffle: true,
+          callback: function() {
+
+            $(".what-we-are em:last").remove();
+            intrvl = setInterval(backspace, humanize);
+
+
+          }
         });
       });
+
     </script>
   </body>
 </html>
