--- a/css/app.scss
+++ b/css/app.scss
@@ -45,6 +45,10 @@ h1, h2, h3, h4, h5, h6 {
 
   margin-bottom: 2em;
 
+  em.nice {
+    color: $swedishYellow;
+  }
+
 }
 
 .callout.large.what-we-are {
