Add employee info

--- a/_includes/content.html
+++ b/_includes/content.html
@@ -18,7 +18,7 @@
     </div>
     <div class="media-object-section info">
       <h4 class="name">{{ employee.name }}</h4>
-      <p class="lead tagline">{{ employee.tagline }}</p>
+      <p class="tagline">{{ employee.tagline }}</p>
     </div>
   </div>
   {% endfor %}
