adds employee images and changes employee descriptions slightly

--- a/_includes/content.html
+++ b/_includes/content.html
@@ -14,7 +14,7 @@
   {% for employee in site.data.employees %}
   <div class="column column-block media-object techie">
     <div class="media-object-section">
-      <img src="http://i.pravatar.cc/200?u={{ employee.name }}@hejare" class="portrait">
+      <img src="images/employees/{{ employee.name }}.jpg" class="portrait">
     </div>
     <div class="media-object-section info">
       <h4 class="name">{{ employee.name }}</h4>
