--- a/_includes/content.html
+++ b/_includes/content.html
@@ -33,14 +33,10 @@
 <div class="row small-up-1 medium-up-2 large-up-2 who-we-are">
 
   {% for employee in site.data.employees %}
-  <div class="column column-block media-object techie">
-    <div class="media-object-section">
-      <img src="images/employees/{{ employee.name }}.jpg" class="portrait">
-    </div>
-    <div class="media-object-section info">
-      <h4 class="name">{{ employee.name }}</h4>
-      <p class="tagline">{{ employee.tagline }}</p>
-    </div>
+  <div class="column column-block techie">
+    <img src="images/employees/{{ employee.name }}.jpg" class="portrait float-center" alt="{{ employee.name }}">
+    <h3 class="name">{{ employee.name }}</h3>
+    <p class="tagline float-center">{{ employee.tagline }}</p>
   </div>
   {% endfor %}
 
