--- a/_includes/content.html
+++ b/_includes/content.html
@@ -10,13 +10,13 @@
 </div>
 
 
-<div class="row what-we-are-doing" aria-label="Case i urval">
+<div class="row column what-we-are-doing" aria-label="Case i urval">
   {% for case in site.data.cases %}
   <div class="case row">
-    <div class="figure-container column large-4">
+    <div class="figure-container column small-12 medium-4 large-3">
       <img src="images/{{ case.image }}" class="figure" />
     </div>
-    <div class="column large-8">
+    <div class="column small-12 medium-7 large-8">
       <h3>{{ case.name }}</h3>
       <p>{{ case.description }}</p>
     </div>
