--- a/css/app.scss
+++ b/css/app.scss
@@ -86,11 +86,12 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 4em;
 
   .case {
-    margin-top: 1.5em;
+    margin-top: 1em;
   }
 
   .figure {
     width: 150px;
+    margin-bottom: 1em;
   }
 }
 
