Fix background color

--- a/css/app.scss
+++ b/css/app.scss
@@ -8,6 +8,7 @@ $swedishGray: #7a7d81;
 $swedishGreenBlue: #159aaa; // 189aaa
 body {
   font-family: Avenir, Futura, sans-serif;
+  background-color: #fff;
 }
 
 h1, h2, h3, h4, h5, h6 {
