adds randomizing of hejare presentations

--- a/_layouts/agency.html
+++ b/_layouts/agency.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/motion-ui/1.1.1/motion-ui.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" />
    </head>
-  <body>
+  <body onload="randomizeWhoWeAre()">
 
     <!-- Start Top Bar -->
     <div class="top-bar">
@@ -40,6 +40,7 @@
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.0/js/foundation.min.js"></script>
     <script src="js/vendor/typed.min.js"></script>
+    <script src="js/utils.js"></script>
 
     <script>
       $(document).foundation();
