--- a/_includes/content.html
+++ b/_includes/content.html
@@ -30,7 +30,7 @@
   <h2 class="title">Vi är hejare</h2>
 </div>
 
-<div class="row small-up-1 medium-up-2 large-up-2 who-we-are">
+<div class="row small-up-1 medium-up-2 large-up-2 who-we-are" id="who-we-are">
 
   {% for employee in site.data.employees %}
   <div class="column column-block techie">
