--- a/_layouts/agency.html
+++ b/_layouts/agency.html
@@ -1,112 +1,115 @@
 <!doctype html>
 <html class="no-js" lang="sv">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{{ site.title }}</title>
-    <link rel="stylesheet" href="css/foundation.css">
-    <link rel="stylesheet" href="css/app.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/motion-ui/1.1.1/motion-ui.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" />
-   </head>
-  <body onload="randomizeWhoWeAre()">
 
-    <!-- Start Top Bar -->
-    <div class="top-bar">
-      <div class="top-bar-left">
-        <img src="images/weblogo.png" class="logotype"/>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>{{ site.title }}</title>
+  <link rel="stylesheet" href="css/foundation.css">
+  <link rel="stylesheet" href="css/app.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/motion-ui/1.1.1/motion-ui.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" />
+</head>
+
+<body onload="randomizeWhoWeAre()">
+
+  <!-- Start Top Bar -->
+  <div class="top-bar">
+    <div class="top-bar-left">
+      <img src="images/weblogo.gif" class="logotype" />
+    </div>
+  </div>
+  <!-- End Top Bar -->
+
+  {{ content }}
+
+  <!-- Footer -->
+
+  <footer class="footer">
+    <div class="row">
+      <div class="small-12 columns">
+        <p class="slogan">Är du en hejare på något? Hör av dig!</p>
+        <h4 class="email"><a href="mailto:{{ site.data.company.email }}">{{ site.data.company.email }}</a></h4>
+        <h4 class="phone"><a href="tel:{{ site.data.company.phone }}">{{ site.data.company.phone }}</a></h4>
+        {% if site.data.company.address != undefined %}
+        <h4 class="address"><br>{{ site.data.company.address | replace: ',', '<br/>'  }}</h4>
+        {% endif %}
+        <p class="copywrite">Crafted with love by incredible techies at Hejare 2017</p>
       </div>
     </div>
-    <!-- End Top Bar -->
+  </footer>
 
-    {{ content }}
+  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.0/js/foundation.min.js"></script>
+  <script src="js/vendor/typed.min.js"></script>
+  <script src="js/utils.js"></script>
 
-    <!-- Footer -->
-
-    <footer class="footer">
-      <div class="row">
-        <div class="small-12 columns">
-          <p class="slogan">Är du en hejare på något? Hör av dig!</p>
-          <h4 class="email"><a href="mailto:{{ site.data.company.email }}">{{ site.data.company.email }}</a></h4>
-          <h4 class="phone"><a href="tel:{{ site.data.company.phone }}">{{ site.data.company.phone }}</a></h4>
-          {% if site.data.company.address != undefined %}
-          <h4 class="address"><br>{{ site.data.company.address | replace: ',', '<br/>'  }}</h4>
-          {% endif %}
-          <p class="copywrite">Crafted with love by incredible techies at Hejare 2017</p>
-        </div>
-      </div>
-    </footer>
-
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.0/js/foundation.min.js"></script>
-    <script src="js/vendor/typed.min.js"></script>
-    <script src="js/utils.js"></script>
-
-    <script>
-      $(document).foundation();
+  <script>
+    $(document).foundation();
 
 
-      var skills = {{ site.data.skills | jsonify }};
+    var skills = {{ site.data.skills | jsonify }};
 
-      skills[skills.length - 1] += "^5000";
-      skills.push("");
-
-
-      jQuery.fn.cleanWhitespace = function() {
-        textNodes = this.contents().filter(
-            function() { return (this.nodeType == 3 && !/\S/.test(this.nodeValue)); })
-            .remove();
-        return this;
-      }
-
-      var humanize = Math.round((Math.random() * 100) + 20);
+    skills[skills.length - 1] += "^5000";
+    skills.push("");
 
 
-      var typedText = $('.what-we-are .already-typed');
-      var intrvl;
+    jQuery.fn.cleanWhitespace = function () {
+      textNodes = this.contents().filter(
+        function () { return (this.nodeType == 3 && !/\S/.test(this.nodeValue)); })
+        .remove();
+      return this;
+    }
 
-      function backspace() {
-        var word = typedText.text();
-        var wordLength = word.length;
-        var newWordLength = wordLength - 1;
-        var newWord = word.slice(0, newWordLength);
-        typedText.html(newWord);
-
-        if (newWord === "Vi är") {
-          clearTimeout(intrvl);
-
-          $("<em class=\"nice\">").insertBefore(".typed-cursor")
-          $(".typed-cursor").remove();
-
-          $(".what-we-are em:last").typed({
-            strings: ["^2000 snälla"],
-            typeSpeed: 300,
-
-          })
+    var humanize = Math.round((Math.random() * 100) + 20);
 
 
-        } else {
-          newWordLength = wordLength;
-        }
-      }
+    var typedText = $('.what-we-are .already-typed');
+    var intrvl;
 
+    function backspace() {
+      var word = typedText.text();
+      var wordLength = word.length;
+      var newWordLength = wordLength - 1;
+      var newWord = word.slice(0, newWordLength);
+      typedText.html(newWord);
 
-      $(function(){
+      if (newWord === "Vi är") {
+        clearTimeout(intrvl);
+
+        $("<em class=\"nice\">").insertBefore(".typed-cursor")
+        $(".typed-cursor").remove();
+
         $(".what-we-are em:last").typed({
-          strings: skills,
-          typeSpeed: 100,
-          startDelay: 1500,
-          //shuffle: true,
-          callback: function() {
+          strings: ["^2000 snälla"],
+          typeSpeed: 300,
 
-            $(".what-we-are em:last").remove();
-            intrvl = setInterval(backspace, humanize);
+        })
 
 
-          }
-        });
+      } else {
+        newWordLength = wordLength;
+      }
+    }
+
+
+    $(function () {
+      $(".what-we-are em:last").typed({
+        strings: skills,
+        typeSpeed: 100,
+        startDelay: 1500,
+        //shuffle: true,
+        callback: function () {
+
+          $(".what-we-are em:last").remove();
+          intrvl = setInterval(backspace, humanize);
+
+
+        }
       });
+    });
 
-    </script>
-  </body>
+  </script>
+</body>
+
 </html>
